--- a/css/perfect-scrollbar.css
+++ b/css/perfect-scrollbar.css
@@ -13,6 +13,8 @@
   .ps-container.ps-active-x > .ps-scrollbar-x-rail,
   .ps-container.ps-active-y > .ps-scrollbar-y-rail {
     display: block;
+     height: 1px !important;
+     /* Ostap: add height */
     background-color: transparent; }
   .ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail {
     background-color: #eee;
@@ -58,14 +60,15 @@
       height: 11px; }
   .ps-container > .ps-scrollbar-y-rail {
     display: none;
-    position: absolute;
+    position: inherit;
     /* please don't change 'position' */
+    /* Ostap: change from absolute */
     opacity: 0;
     -webkit-transition: background-color .2s linear, opacity .2s linear;
     -o-transition: background-color .2s linear, opacity .2s linear;
     -moz-transition: background-color .2s linear, opacity .2s linear;
     transition: background-color .2s linear, opacity .2s linear;
-    right: 15px;
+    right: 0;
     /* there must be 'right' for ps-scrollbar-y-rail */
     /* Ostap: shift scrolbar 15px left */
     width: 15px; }
